--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet" />
         <link href="./css/main.css" rel="stylesheet" />
-        <title>Document</title>
+        <title>CSV müügiarvete teisendamine</title>
+        <link rel="icon" type="image/x-icon" href="./images/icon.png">
     </head>
     
     <body>
@@ -16,12 +17,11 @@
                                 <div class="v1_45">
                                     <div class="v1_46">
                                         <div class="v1_47">
-                                            <span class="logo-text">CSV m&uuml;&uuml;giarvete teisendamine</span>
+                                            <span class="logo-text">CSV müügiarvete teisendamine</span>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="v1_52"></div>
                         </div>
                     </div>
                 </div>
@@ -37,88 +37,74 @@
                             </div>
                             <div class="v1_64">
                                 <div class="v1_65">
-                                    <span class="v1_66">Teisendab .csv vormingus m&uuml;&uuml;giarved .xml kujule, mida saab Meritisse importida.</span>
+                                    <span class="v1_66">Teisendab .csv vormingus müügiarve .xml kujule, mille saab Meritisse importida.</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="v1_67">
-                        <div class="v1_68">
-                            <div class="v1_69">
+                        <div class="step1">
+                            <div class="step1-header">
                                 <div class="v1_70">
                                     <div class="v1_71"></div>
                                     <div class="v1_72"></div>
                                 </div>
                             </div>
-                            <div class="v1_73">
+                            <div class="step1-text">
                                 <div class="v1_74">
                                     <div class="v1_75">
-                                        <span class="v1_76">Import your CSV files</span>
+                                        <span class="v1_76">CSV faili import</span>
                                     </div>
                                 </div>
                                 <div class="v1_77">
                                     <div class="v1_78">
-                                        <span class="v1_79">Simply upload your CSV files and we'll do the rest</span>
+                                        <span class="v1_79">
+                                            Lae müügiprogrammist või e-poest salvestatud CSV fail MyykCSV
+                                            programmi.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="v1_80">
+                        <div class="step2">
                             <div class="v1_81">
                                 <div class="v1_82">
-                                    <div class="v1_83"></div>
                                     <div class="v1_84"></div>
                                 </div>
                             </div>
                             <div class="v1_85">
                                 <div class="v1_86">
                                     <div class="v1_87">
-                                        <span class="v1_88">Categorize transactions</span>
+                                        <span class="v1_88">XML teisendus</span>
                                     </div>
                                 </div>
                                 <div class="v1_89">
                                     <div class="v1_90">
-                                        <span class="v1_91">Group your transactions by  type to keep your finances  organized</span>
+                                        <span class="v1_91">
+                                            MyykCSV teisendab müügiarved Meritisse importimiseks
+                                            sobivale XML kujule.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="v1_92">
+                        <div class="step3">
                             <div class="v1_93">
                                 <div class="v1_94">
-                                    <div class="v1_95"></div>
                                     <div class="v1_96"></div>
                                 </div>
                             </div>
                             <div class="v1_97">
                                 <div class="v1_98">
                                     <div class="v1_99">
-                                        <span class="v1_100">Generate financial reports</span>
+                                        <span class="v1_100">Import Meritisse</span>
                                     </div>
                                 </div>
                                 <div class="v1_101">
                                     <div class="v1_102">
-                                        <span class="v1_103">Quickly create financial reports that are easy to read and understand</span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="v1_104">
-                            <div class="v1_105">
-                                <div class="v1_106">
-                                    <div class="v1_107"></div>
-                                    <div class="v1_108"></div>
-                                </div>
-                            </div>
-                            <div class="v1_109">
-                                <div class="v1_110">
-                                    <div class="v1_111">
-                                        <span class="v1_112">Export your financial reports</span>
-                                    </div>
-                                </div>
-                                <div class="v1_113">
-                                    <div class="v1_114">
-                                        <span class="v1_115">Export your financial reports so you can share them with others or keep them for your records</span>
+                                        <span class="v1_103">
+                                            Lae saadud müügiarvete XML fail Meritisse.
+                                        </span>
                                     </div>
                                 </div>
                             </div>
@@ -133,18 +119,23 @@
             <div class="v1_178">
                 <div class="v1_179">
                     <div class="v1_180">
-                        <div class="v1_181">
-                            <span class="v1_182">Metsik Eeter OÜ</span>
+                        <div>
+                            <span >Metsik Eeter OÜ</span>
+                        </div>
+                        <div>
+                            <span>
+                                Registrikood: 16192869
+                            </span>
                         </div>
                     </div>
                     <div class="v1_183">
-                        <div class="v1_184">
-                            <span class="v1_185">Kontakt: metsik</span>
+                        <div>
+                            <span>Kontakt:
+                                <a href="mailto:metsikeeter@protonmail.com">metsikeeter@protonmail.ch</a>
+                            </span>
                         </div>
-                    </div>
-                    <div class="v1_186">
-                        <div class="v1_187">
-                            <span class="v1_188">Support</span>
+                        <div>
+                            <span>Telefon: 5080 194</span>
                         </div>
                     </div>
                 </div>
