--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             </span>
                         </div>
                         <div>
-                            <span>Telefon: 5080 194</span>
+                            <span>Telefon: +372 5080 194</span>
                         </div>
                     </div>
                 </div>
@@ -144,4 +144,3 @@
     </body>
     </html>
 
-    
